--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -90,8 +90,8 @@
                 <a class="a-link-dialog" (click)="showDisclaimerDialog()">Disclaimer</a>
                 &nbsp; | &nbsp;
                 <a class="a-link-dialog" routerLink="/privacy">Privacy</a>
-<!--                &nbsp; | &nbsp;-->
-<!--                <a class="a-link-dialog" routerLink="/analytics">Status</a>-->
+                &nbsp; | &nbsp;
+                <a class="a-link-dialog" routerLink="/analytics">Status</a>
               </div>
 
 
