--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -14,8 +14,8 @@
           <a class="a-link-dialog" (click)="showDisclaimerDialog()">Disclaimer</a>
           &nbsp; | &nbsp;
           <a class="a-link-dialog" routerLink="/privacy">Privacy</a>
-<!--          &nbsp; | &nbsp;-->
-<!--          <a class="a-link-dialog" routerLink="/analytics">Status</a>-->
+          &nbsp; | &nbsp;
+          <a class="a-link-dialog" routerLink="/analytics">Status</a>
         </div>
 
 
@@ -38,8 +38,8 @@
           <a class="a-link-dialog" (click)="showDisclaimerDialog()">Disclaimer</a>
           &nbsp; | &nbsp;
           <a class="a-link-dialog" routerLink="/privacy">Privacy</a>
-<!--          &nbsp; | &nbsp;-->
-<!--          <a class="a-link-dialog" routerLink="/analytics">Status</a>-->
+          &nbsp; | &nbsp;
+          <a class="a-link-dialog" routerLink="/analytics">Status</a>
         </div>
 
       </div>
