--- a/src/app/indexer/analytics/analytics.component.scss
+++ b/src/app/indexer/analytics/analytics.component.scss
@@ -2,5 +2,16 @@
 .ngx-chart-container {
   width: 100%;
   height: 250px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+.chart-container {
+  background: #fff;
+  margin-bottom: 25px;
+  padding: 0 25px;
+  h2 {
+    margin-top: 17px;
+  }
+
+  box-shadow: 0px 0px 10px 1px #18333314 !important;
 }
