--- a/src/assets/styles/icons.scss
+++ b/src/assets/styles/icons.scss
@@ -611,6 +611,10 @@
 .unit_icon40x40.athena {
   background: url(../images/game/god_icons_40x40.png) 0 -80px no-repeat;
 }
+.hero40x40.athene,
+.unit_icon40x40.athene {
+  background: url(../images/game/god_icons_40x40.png) 0 -80px no-repeat;
+}
 .hero40x40.poseidon,
 .unit_icon40x40.poseidon {
   background: url(../images/game/god_icons_40x40.png) -80px -120px no-repeat;
@@ -629,6 +633,10 @@
 }
 .hero40x40.aphrodite,
 .unit_icon40x40.aphrodite {
+  background: url(../images/game/god_icons_40x40.png) 0 0 no-repeat;
+}
+.hero40x40.afrodite,
+.unit_icon40x40.afrodite {
   background: url(../images/game/god_icons_40x40.png) 0 0 no-repeat;
 }
 .hero40x40.ares,
