List ghost towns for ghosted players and scoreboard

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -93,12 +93,23 @@
       Currently our userscript allows you to collect published reports that are posted on your alliance forum or sent to you in a personal message.
       Reports from your reports inbox can also be indexed without publishing them.
       Converted reports from other third party tools can not yet be indexed.
-    </div>
+    </div>B
   </div>
   <div class="alert alert-gd-1">
-    <h2 class="gd-primary">Is my team secure?</h2>
+    <h2 class="gd-primary">Is my data secure?</h2>
     <div class="faq-content">
-      As an admin or owner of a team, you can add or remove users from the team at any time. Only active members of the team will have access to the information in the team. Once you remove a user, they will nog longer be able to access the collected intel from your team.
+      The newly updated GrepoData city indexer tool was developed with data security as it's number one priority. Above all else, data must be stored securely and team admins must have absolute authority over who has access to the team's intel & data.
+      <br/>
+      <br/>
+      <strong>Data protection</strong><br/>
+      We take data protection very seriously. All sensitive user data is stored using industry standard best practices.
+      Even in the unlikely event that an unauthorized person gains access to this data; they would be unable to parse the hashed data they would find.
+      <br/>
+      <br/>
+      <strong>GrepoData team security</strong><br/>
+      As an admin or owner of a team, you can add or remove users from the team at any time.
+      Only active members of the team will have access to the information in the team.
+      Once you remove a user, they will nog longer be able to access the collected intel from your team.
     </div>
   </div>
   <div class="alert alert-gd-1">
