--- a/src/app/indexer/overview/overview.component.html
+++ b/src/app/indexer/overview/overview.component.html
@@ -232,7 +232,7 @@
 
                       <span *ngIf="name_saved" class="gd-primary">
                         <br/><mat-icon style="vertical-align: bottom;">check_circle_outline</mat-icon>
-                        Index name updated
+                        Team name updated
                       </span>
                       <span *ngIf="saving_name" class="gd-primary">
                         <br/>
