--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -94,3 +94,10 @@ p {
 mat-chip:hover {
   cursor: pointer !important;
 }
+
+.ghost-won {
+  background: #00961050 !important;
+}
+.ghost-lost {
+  background: #CF443550 !important;
+}
