--- a/src/app/scoreboard/scoreboard.component.html
+++ b/src/app/scoreboard/scoreboard.component.html
@@ -335,99 +335,145 @@
               </div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 scoreboard-table">
-              <!--<h3 class="mat-title table-title">Most conquests</h3>-->
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 scoreboard-table">
+              <div class="col-xs-12 scoreboard-table" *ngIf="!!ghostsData && ghostsData.length > 0">
 
-              <h3 class="mat-title table-title" style="float: left;">
-                <button name="open_bb" style="" class="btn btn-primary btn-xs" (click)="openBBdialog('players_con')">
-                  <i class="fa fa-code"></i>&nbsp;BB code
-                </button>&nbsp;
-                <span>Most conquests</span>
-              </h3>
-              <div class="table" id="table_conquests_players" style="">
-                <div class="row_custom header green">
-                  <div class="cell hidden-xs">Rank</div>
-                  <div class="cell">Player</div>
-                  <div class="cell">Towns</div>
-	                <div class="cell hidden-xs hidden-sm" *ngIf="!mobile"></div>
-                </div>
+                <h3 class="mat-title table-title" style="float: left;">
+                  <span>Ghosted players</span>
+                </h3>
 
-                <div *ngFor="let p of playerData.con; let i = index;" class="row_custom {{i>=(mobile?10:20) && toggleMore ? 'hidden-cell' : '' }}">
-                  <div class="cell hidden-xs" *ngIf="i==0">🏆</div>
-                  <div class="cell hidden-xs" *ngIf="i>0">{{i+1}}</div>
-                  <div class="cell formatted-cell">
-                    <a routerLink="/player" [queryParams]="{world: playerData.world, id: p.i}">{{p.n}}</a>
+                <div class="index-events-container">
+                  <div class="text-left">
+
+                    <div class="events-list">
+                      <div class="event" [ngClass]="{'odd':i%2==1}" *ngFor="let ghost of ghostsData; let i = index">
+                        <div class="event-date">
+                          {{ghost.time | Datex : 'D MMM YYYY ~HH:00'}}
+                        </div>
+                        <div>
+                          Player
+                          <a routerLink="/player" [queryParams]="{world: world, id: ghost.player_id}">
+                            <img style="height: 18px; margin-top: -5px;" src="../../assets/images/player_ico.png"/>&nbsp;
+                            <span class="gd-brown">{{ghost.player_name}}</span>
+                          </a>
+                          <span *ngIf="!ghost.alliance_id && ghost.alliance_id > 0">
+                            &nbsp; (
+                            <a routerLink="/alliance" [queryParams]="{world: world, id: ghost.alliance_id}">
+                              <img style="height: 18px; margin-top: -5px;" src="../../assets/images/ally_ico.png"/>&nbsp;
+                              <span class="gd-brown">{{ghost.alliance_name}}</span>
+                            </a>
+                            )
+                          </span>
+                          Ghosted with
+                          <span class="event-part entity"><strong>{{ghost.num_towns}}</strong></span>
+                          towns.
+                        </div>
+                        <div>
+                          <a class="btn-success btn-xs" routerLink="/player" [queryParams]="{world: world, id: ghost.player_id}">
+                            View ghost towns
+                          </a>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                  <div *ngIf="p.s > 0 && !mobile" class="cell score-expand" (click)="showConquests('player', p.i, p.n)">
-	                  {{p.s}}
-                  </div>
-	                <div *ngIf="p.s <= 0 || mobile">{{p.s}}</div>
-	                <div *ngIf="p.s > 0 && !mobile" class="cell hidden-xs hidden-sm score-expand expand-icon" (click)="showConquests('player', p.i, p.n)">
-		                <img src="../../assets/images/icons/expand.png" style="vertical-align: unset;" height="16"/>
-	                </div>
-	                <div *ngIf="p.s <= 0 && !mobile" class="cell hidden-xs"></div>
                 </div>
 
               </div>
-              <div class="text-center show-more">
-                <button class="mat-primary mat-hue-1 mat-button mat-ink-ripple" type="button" (click)="toggleMore = !toggleMore">
-                  <span *ngIf="toggleMore" class="ng-scope">
-                    Show more <span class="fa fa-chevron-down"></span>
-                  </span>
-                  <span *ngIf="!toggleMore" class="ng-scope">
-                    Show less <span class="fa fa-chevron-up"></span>
-                  </span>
-                  <div class="mat-ripple-container" style=""></div>
-                </button>
+
+              <div class="col-xs-12 col-sm-6 scoreboard-table">
+
+                <h3 class="mat-title table-title" style="float: left;">
+                  <button name="open_bb" style="" class="btn btn-primary btn-xs" (click)="openBBdialog('players_con')">
+                    <i class="fa fa-code"></i>&nbsp;BB code
+                  </button>&nbsp;
+                  <span>Most conquests</span>
+                </h3>
+                <div class="table" id="table_conquests_players" style="">
+                  <div class="row_custom header green">
+                    <div class="cell hidden-xs">Rank</div>
+                    <div class="cell">Player</div>
+                    <div class="cell">Towns</div>
+                    <div class="cell hidden-xs hidden-sm" *ngIf="!mobile"></div>
+                  </div>
+
+                  <div *ngFor="let p of playerData.con; let i = index;" class="row_custom {{i>=conquestVisibleRows && toggleMore ? 'hidden-cell' : '' }}">
+                    <div class="cell hidden-xs" *ngIf="i==0">🏆</div>
+                    <div class="cell hidden-xs" *ngIf="i>0">{{i+1}}</div>
+                    <div class="cell formatted-cell">
+                      <a routerLink="/player" [queryParams]="{world: playerData.world, id: p.i}">{{p.n}}</a>
+                    </div>
+                    <div *ngIf="p.s > 0 && !mobile" class="cell score-expand" (click)="showConquests('player', p.i, p.n)">
+                      {{p.s}}
+                    </div>
+                    <div *ngIf="p.s <= 0 || mobile">{{p.s}}</div>
+                    <div *ngIf="p.s > 0 && !mobile" class="cell hidden-xs hidden-sm score-expand expand-icon" (click)="showConquests('player', p.i, p.n)">
+                      <img src="../../assets/images/icons/expand.png" style="vertical-align: unset;" height="16"/>
+                    </div>
+                    <div *ngIf="p.s <= 0 && !mobile" class="cell hidden-xs"></div>
+                  </div>
+
+                </div>
+                <div class="text-center show-more">
+                  <button class="mat-primary mat-hue-1 mat-button mat-ink-ripple" type="button" (click)="toggleMore = !toggleMore">
+                    <span *ngIf="toggleMore" class="ng-scope">
+                      Show more <span class="fa fa-chevron-down"></span>
+                    </span>
+                    <span *ngIf="!toggleMore" class="ng-scope">
+                      Show less <span class="fa fa-chevron-up"></span>
+                    </span>
+                    <div class="mat-ripple-container" style=""></div>
+                  </button>
+                </div>
               </div>
+
+              <div class="col-xs-12 col-sm-6 scoreboard-table">
+
+                <h3 class="mat-title table-title" style="float: left;">
+                  <button name="open_bb" style="" class="btn btn-primary btn-xs" (click)="openBBdialog('players_los')">
+                    <i class="fa fa-code"></i>&nbsp;BB code
+                  </button>&nbsp;
+                  <span>Losing cities</span>
+                </h3>
+                <div class="table" id="table_losses_players" style="">
+                  <div class="row_custom header dark">
+                    <div class="cell hidden-xs">Rank</div>
+                    <div class="cell">Player</div>
+                    <div class="cell">Towns</div>
+                    <div class="cell hidden-xs hidden-sm" *ngIf="!mobile"></div>
+                  </div>
+
+                  <div *ngFor="let p of playerData.los; let i = index;" class="row_custom {{i>=conquestVisibleRows && toggleMore ? 'hidden-cell' : '' }}">
+                    <div class="cell hidden-xs" *ngIf="i==0">🚫</div>
+                    <div class="cell hidden-xs" *ngIf="i>0">{{i+1}}</div>
+                    <div class="cell formatted-cell">
+                      <a routerLink="/player" [queryParams]="{world: playerData.world, id: p.i}">{{p.n}}</a>
+                    </div>
+                    <div *ngIf="p.s > 0 && !mobile" class="cell score-expand" (click)="showConquests('player', p.i, p.n)">
+                      -{{p.s}}
+                    </div>
+                    <div *ngIf="p.s <= 0 || mobile">-{{p.s}}</div>
+                    <div *ngIf="p.s > 0 && !mobile" class="cell hidden-xs hidden-sm score-expand expand-icon" (click)="showConquests('player', p.i, p.n)">
+                      <img src="../../assets/images/icons/expand.png" style="vertical-align: unset;" height="16"/>
+                    </div>
+                    <div *ngIf="p.s <= 0 && !mobile" class="cell hidden-xs"></div>
+                  </div>
+
+                </div>
+                <div class="text-center show-more">
+                  <button class="mat-primary mat-hue-1 mat-button mat-ink-ripple" type="button" (click)="toggleMore = !toggleMore">
+                    <span *ngIf="toggleMore" class="ng-scope">
+                      Show more <span class="fa fa-chevron-down"></span>
+                    </span>
+                    <span *ngIf="!toggleMore" class="ng-scope">
+                      Show less <span class="fa fa-chevron-up"></span>
+                    </span>
+                    <div class="mat-ripple-container" style=""></div>
+                  </button>
+                </div>
+              </div>
+
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 scoreboard-table">
-              <!--<h3 class="mat-title table-title">Losing cities</h3>-->
-
-              <h3 class="mat-title table-title" style="float: left;">
-                <button name="open_bb" style="" class="btn btn-primary btn-xs" (click)="openBBdialog('players_los')">
-                  <i class="fa fa-code"></i>&nbsp;BB code
-                </button>&nbsp;
-                <span>Losing cities</span>
-              </h3>
-              <div class="table" id="table_losses_players" style="">
-                <div class="row_custom header dark">
-                  <div class="cell hidden-xs">Rank</div>
-                  <div class="cell">Player</div>
-                  <div class="cell">Towns</div>
-	                <div class="cell hidden-xs hidden-sm" *ngIf="!mobile"></div>
-                </div>
-
-                <div *ngFor="let p of playerData.los; let i = index;" class="row_custom {{i>=(mobile?10:20) && toggleMore ? 'hidden-cell' : '' }}">
-                  <div class="cell hidden-xs" *ngIf="i==0">🚫</div>
-                  <div class="cell hidden-xs" *ngIf="i>0">{{i+1}}</div>
-                  <div class="cell formatted-cell">
-                    <a routerLink="/player" [queryParams]="{world: playerData.world, id: p.i}">{{p.n}}</a>
-                  </div>
-	                <div *ngIf="p.s > 0 && !mobile" class="cell score-expand" (click)="showConquests('player', p.i, p.n)">
-		                -{{p.s}}
-	                </div>
-	                <div *ngIf="p.s <= 0 || mobile">-{{p.s}}</div>
-	                <div *ngIf="p.s > 0 && !mobile" class="cell hidden-xs hidden-sm score-expand expand-icon" (click)="showConquests('player', p.i, p.n)">
-		                <img src="../../assets/images/icons/expand.png" style="vertical-align: unset;" height="16"/>
-	                </div>
-	                <div *ngIf="p.s <= 0 && !mobile" class="cell hidden-xs"></div>
-                </div>
-
-              </div>
-              <div class="text-center show-more">
-                <button class="mat-primary mat-hue-1 mat-button mat-ink-ripple" type="button" (click)="toggleMore = !toggleMore">
-                  <span *ngIf="toggleMore" class="ng-scope">
-                    Show more <span class="fa fa-chevron-down"></span>
-                  </span>
-                  <span *ngIf="!toggleMore" class="ng-scope">
-                    Show less <span class="fa fa-chevron-up"></span>
-                  </span>
-                  <div class="mat-ripple-container" style=""></div>
-                </button>
-              </div>
-            </div>
           </div>
         </div>
 
