--- a/src/app/scoreboard/scoreboard.component.scss
+++ b/src/app/scoreboard/scoreboard.component.scss
@@ -256,3 +256,41 @@ $duration: 130s;
   background: rgba(245, 245, 245, 0.3);
   cursor: pointer;
 }
+
+.events-list {
+  width: 100%;
+  min-height: 20px;
+  border: 1px solid #334254;
+  border-radius: 10px;
+  overflow: hidden;
+
+  .event {
+    height: 30px;
+
+    padding: 0 10px;
+    font-weight: 400;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    .event-date {
+      color: #334254;
+      margin-right: 10px;
+      min-width: 80px;
+    }
+
+    .event-part.entity {
+      color: #18BC9C;
+    }
+
+    .mat-icon {
+      vertical-align: bottom;
+    }
+  }
+
+  .event.odd {
+    background: #f3f3f3;
+  }
+}
